# enforce-direct-access

./: .gitignore  .taplo.toml  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md  package.json  pnpm-lock.yaml
e2e-tests/: README.md  babel.test.ts  package.json  swc.test.ts  test-cases.ts  tsconfig.json
script/: prerelease.mts
